# aleph-cxx

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/aleph_edit/: CMakeLists.txt  live_hud.hpp  main.cpp
bench/: CMakeLists.txt  bench_harness.hpp  bench_main.cpp  bench_scaling.cpp  run-baselines.sh
bridge/src/aleph.edit/: CMakeLists.txt  aleph.edit-controller.cppm  aleph.edit.cppm
bridge/src/aleph.lowering/: CMakeLists.txt  aleph.lowering-build.cppm  aleph.lowering-build_sw.cppm  aleph.lowering-grouping.cppm  aleph.lowering-importance.cppm  aleph.lowering-incremental.cppm  aleph.lowering-lower.cppm  aleph.lowering-lowered.cppm  aleph.lowering-ops.cppm  aleph.lowering.cppm
foundation/: CMakeLists.txt
foundation/src/aleph.alloc/: CMakeLists.txt  aleph.alloc-arena.cppm  aleph.alloc-frame.cppm  aleph.alloc-freelist.cppm  aleph.alloc-pmr_adapter.cppm  aleph.alloc-slab.cppm  aleph.alloc.cppm
foundation/src/aleph.containers/: CMakeLists.txt  aleph.containers-dense_index.cppm  aleph.containers-flat_set.cppm  aleph.containers-ordered_map.cppm  aleph.containers-small_vector.cppm  aleph.containers.cppm
foundation/src/aleph.cpu/: CMakeLists.txt  aleph.cpu-cycles.cppm  aleph.cpu-hints.cppm  aleph.cpu-isa.cppm  aleph.cpu-perf.cppm  aleph.cpu.cppm
foundation/src/aleph.io/: CMakeLists.txt  aleph.io-mmap.cppm  aleph.io-obj.cppm  aleph.io-ppm.cppm  aleph.io.cppm
foundation/src/aleph.linalg.gf2/: CMakeLists.txt  aleph.linalg.gf2-bitmatrix.cppm  aleph.linalg.gf2-bitvec.cppm  aleph.linalg.gf2.cppm
foundation/src/aleph.linalg.sparse/: CMakeLists.txt  aleph.linalg.sparse-bk_ldlt.cppm  aleph.linalg.sparse-csr.cppm  aleph.linalg.sparse-dense.cppm  aleph.linalg.sparse-ldlt.cppm  aleph.linalg.sparse-ldlt_sparse.cppm  aleph.linalg.sparse.cppm
foundation/src/aleph.math/: CMakeLists.txt  aleph.math-bivector.cppm  aleph.math-concepts.cppm  aleph.math-dual.cppm  aleph.math-geom.cppm  aleph.math-mat.cppm  aleph.math-multivector.cppm  aleph.math-quat.cppm  aleph.math-rotor.cppm  aleph.math-tangent.cppm  aleph.math-types.cppm  aleph.math-vec.cppm  aleph.math.cppm
foundation/src/aleph.threads/: CMakeLists.txt  aleph.threads-mpmc.cppm  aleph.threads-pool.cppm  aleph.threads-work_stealing.cppm  aleph.threads.cppm
graph/src/aleph.dpo/: CMakeLists.txt  aleph.dpo-apply.cppm  aleph.dpo-matcher.cppm  aleph.dpo-pattern.cppm  aleph.dpo-rule.cppm  aleph.dpo-rules.cppm  aleph.dpo.cppm
graph/src/aleph.flow/: CMakeLists.txt  aleph.flow-flow.cppm  aleph.flow-laplacian.cppm  aleph.flow-ollivier_ricci.cppm  aleph.flow-wasserstein1.cppm  aleph.flow-wasserstein2.cppm  aleph.flow.cppm
graph/src/aleph.sheaf/: CMakeLists.txt  aleph.sheaf-cochain.cppm  aleph.sheaf-cohomology.cppm  aleph.sheaf-connecting.cppm  aleph.sheaf-dec.cppm  aleph.sheaf-flag_complex.cppm  aleph.sheaf-mayer_vietoris.cppm  (+10 more)
render/: CMakeLists.txt
tests/: CMakeLists.txt  asan.supp  test_smoke.cpp  tla_cxx_sync.cpp
tests/alloc/: test_arena.cpp  test_frame.cpp  test_freelist.cpp  test_pmr_adapter.cpp  test_slab.cpp
tests/containers/: test_dense_index.cpp  test_flat_set.cpp  test_ordered_map.cpp  test_small_vector.cpp
tests/cpu/: test_cpu.cpp
tests/dpo/: test_dpo.cpp  test_dpo_stress.cpp
tests/edit/: test_build_sw.cpp  test_controller.cpp  test_live_hud.cpp  test_mv_controller.cpp  test_project_workflow.cpp  test_sim_controller.cpp  test_translate.cpp
tests/editor/: test_orbit.cpp  test_pick.cpp
tests/flow/: test_flow.cpp  test_laplacian.cpp  test_mv_localization.cpp  test_ollivier_ricci.cpp  test_shared_adjacency.cpp  test_sparse_laplacian.cpp  test_wasserstein1.cpp  test_wasserstein2.cpp
tests/graph/: test_attribute.cpp  test_edge.cpp  test_graph_basic.cpp  test_graph_edges.cpp  test_graph_serialization.cpp  test_id.cpp  test_invariants_1_5.cpp  test_invariants_6_10.cpp  test_node.cpp
tests/io/: test_mmap.cpp  test_obj.cpp  test_obj_malformed.cpp  test_ppm.cpp
tests/isolation/: CMakeLists.txt  iso_alloc.cpp  iso_containers.cpp  iso_cpu.cpp  iso_dpo.cpp  iso_editor.cpp  iso_flow.cpp  iso_graph.cpp  iso_io.cpp  iso_linalg_gf2.cpp  iso_linalg_sparse.cpp  iso_math.cpp  iso_render_common.cpp  iso_render_rt.cpp  iso_render_sw.cpp  iso_scene.cpp  iso_sheaf.cpp  iso_sim.cpp  iso_types.cpp  iso_window.cpp
tests/linalg/: test_bk_ldlt.cpp  test_gf2.cpp  test_sparse.cpp
tests/lowering/: lowering_freeze.hpp  test_add_object.cpp  test_build_render_scene.cpp  test_determinism.cpp  test_dpo_edit.cpp  test_edit_material.cpp  test_groups_in_scene.cpp  test_import_obj.cpp  test_importance.cpp  test_incremental.cpp  test_incremental_sequences.cpp  test_light_grouping.cpp  test_lower_minimal.cpp  test_missing_reference.cpp  test_transform_hierarchy.cpp
tests/math/: test_bivector.cpp  test_dual.cpp  test_geom.cpp  test_mat.cpp  test_multivector.cpp  test_quat.cpp  test_rotor.cpp  test_rotor_advanced.cpp  test_tangent.cpp  test_types.cpp  test_vec.cpp
tests/render/: test_adaptive_spp.cpp  test_camera.cpp  test_editor_perf.cpp  test_film.cpp  test_grouped_nee.cpp  test_material_scatter.cpp  test_path_trace.cpp  test_ray_color.cpp  test_sw_clip.cpp  test_sw_downsample.cpp  test_sw_lightmap.cpp  test_sw_outline.cpp  test_sw_rasterize.cpp  test_sw_rasterize_full.cpp  test_sw_span_buffer.cpp  test_tonemap.cpp
tests/scene/: test_bvh_build.cpp  test_handle32.cpp  test_hit.cpp  test_material_soa.cpp  test_quad_tri_soa.cpp  test_scene.cpp  test_sphere_soa.cpp
tests/sheaf/: test_cochain.cpp  test_cohomology.cpp  test_cohomology_invalid.cpp  test_connecting.cpp  test_dec.cpp  test_flag_complex.cpp  test_mayer_vietoris.cpp  test_sheaf_constant.cpp  test_sheaf_spd.cpp  test_sheaf_trait.cpp  test_sheaf_visibility.cpp  test_simplex.cpp  test_skeleton.cpp  test_subgraph.cpp  test_union_find.cpp  test_zigzag.cpp
tests/sim/: test_diffuse.cpp  test_field.cpp  test_helmholtz.cpp  test_implicit.cpp  test_implicit_sparse.cpp  test_resonance.cpp  test_section.cpp  test_vector_field.cpp  test_wave.cpp
tests/threads/: test_mpmc.cpp  test_pool.cpp  test_pool_stress.cpp  test_work_stealing.cpp
tests/window/: test_window_init.cpp
(+167 files in other folders)
