# Modules added by later tasks via add_subdirectory.
add_subdirectory(src/aleph.cpu)
add_subdirectory(src/aleph.math)
add_subdirectory(src/aleph.alloc)
add_subdirectory(src/aleph.containers)
add_subdirectory(src/aleph.threads)
add_subdirectory(src/aleph.io)
add_subdirectory(src/aleph.linalg.gf2)
add_subdirectory(src/aleph.linalg.sparse)
